--- a/BCH-parse-try.tex
+++ b/BCH-parse-try.tex
@@ -18,7 +18,7 @@ Consider a binary channel which can transmit either of two symbols 0 or 1. Howew
 
 A $v$-letter $n$-place binary signalling alphabet $A_n$ may be defined as a set of $v$ distinct sequences $\alpha_0,\alpha_1, \dots, \alpha_{v-1}$ of $n$ binary digits. The individual sequences may be called the letters of the alphabet. Given a set of $v$ distinct messages over the channel the $n$ individual symbols of the corresponding letter of the alphabet are presented to the channel in succession. The output is then an $n$-place binary sequence belonging to the set $B_n$ of all possible binary sequences. A decoder $D_{n,v}$ is obtained by partitioning $B_n$ into $v$ disjoint sets $S_1, S_2, \dots, S_v$ and setting up a correspondence between these subsets and the letters of the alphabet so that if a sequence belonging to $S_i$ is received as an output, it is read as the letter $\alpha_u$ and interpreted as the corresponding message. The encoder $E_{n,v}$ together with the decoder $D_{n,v}$ constitute a binary $n$-place code.
 
-Each sequence of $B_n$ can be regarded as an $n$-vector with elements from the Galois foeld $GF(2)$. The addition of these vectors being obtained by adding the corresponding elements (mod 2). For example, if $n=6$ and $\gamma_1=(110011)$ and $\gamma_2=(101001)$ then $\gamma_1+\gamma_2=(011010)$. Clearly the set $B_n$ of all binary $n$-place sequences forms a group under vector addition. The weight $w(\gamma)$ of any sequence is defined as the number of unities in the seqence. Thus in the example considered $w(\gamma_1)=4, w(\gamma_2)=3$. The Hamming distance $d(\gamma_1, \gamma_2)$ between two sequences $\gamma_1$ and $\gamma_2$ is defined as the number of places in which $\gamma_1$ and $\gamma_2$ do not match (Hamming, 1950). Clearly $d(\gamma_1, \gamma_2)=w(\gamma_1+\gamma_2)$. In this example $d(\gamma_1, \gamma_2)=3=w(\gamma_1+\gamma_2)$. The Hamming distance satisfies the three conditions for a metric, namely\\
+Each sequence of $B_n$ can be regarded as an $n$-vector with elements from the Galois field $GF(2)$. The addition of these vectors being obtained by adding the corresponding elements (mod 2). For example, if $n=6$ and $\gamma_1=(110011)$ and $\gamma_2=(101001)$ then $\gamma_1+\gamma_2=(011010)$. Clearly the set $B_n$ of all binary $n$-place sequences forms a group under vector addition. The weight $w(\gamma)$ of any sequence is defined as the number of unities in the seqence. Thus in the example considered $w(\gamma_1)=4, w(\gamma_2)=3$. The Hamming distance $d(\gamma_1, \gamma_2)$ between two sequences $\gamma_1$ and $\gamma_2$ is defined as the number of places in which $\gamma_1$ and $\gamma_2$ do not match (Hamming, 1950). Clearly $d(\gamma_1, \gamma_2)=w(\gamma_1+\gamma_2)$. In this example $d(\gamma_1, \gamma_2)=3=w(\gamma_1+\gamma_2)$. The Hamming distance satisfies the three conditions for a metric, namely\\
 (a) $d(\gamma_1, \gamma_2)=0$ if and only if $\gamma_1=\gamma_2$.\\
 (b) $d(\gamma_1, \gamma_2)=d(\gamma_2, \gamma_1)$,\\
 (c) $d(\gamma_1, \gamma_2)+d(\gamma_2, \gamma_3) \geqq d(\gamma_1, \gamma_3)$.\\
